@@ -67,7 +67,7 @@
   drivers/fbdev_drv.so
   input/wacom_drv.so
   input/mouse_drv.so
-  input/keyboard_drv.so
+  input/kbd_drv.so
   linux/libfbdevhw.so
   libfb.so
   libshadow.so
@@ -78,8 +78,8 @@
     misc/cursor.pcf.gz
     TTF/bengali/MuktiNarrow.ttf
     TTF/dejavu/DejaVuSans.ttf
-    TTF/dejavu/DejaVuSans-Bold.ttf
-    TTF/dejavu/DejaVuSans-BoldOblique.ttf
+    TTF/dejavu/DejaVuSansBold.ttf
+    TTF/dejavu/DejaVuSansBoldOblique.ttf
     TTF/devanagari/raghu.ttf
     TTF/gurmukhi/lohit_pa.ttf
     TTF/thai/norasi_n.ttf
