@@ -1,3 +1,7 @@
+- adapt to cooker: 
+  o kbd_drv.so instead of keyboard_drv.so
+  o DejaVuSansBold*.ttf instead of DejaVuSans-Bold*.ttf
+
 Version 10.5.4 - 13 November 2007, by Pascal "Pixel" Rigaux
 
 - use UUID by default (in fstab, bootloader)
